# skill-tree

./: .gitignore  .skill-tree.toml  .skill_tree.toml  AGENTS.md  Cargo.toml  README.md  STATUS.md  book.toml  formality.dot
.github/workflows/: ci.yml  deploy-book.yml
md/: introduction.md  summary.md  welcome.md
md/contributing/: common-issues.md  important-flows.md  module-structure.md  running-tests.md
md/design/: architecture.md  common-issues.md  config.md  edge-convention.md  embed-demo.md  github-client.md  graph-build.md  html-embed.md  issue-edges.md  module-structure.md  node-display.md  node-model.md  project-fetch.md  render.md  roadmap.md  see-also.md
skill-tree-testlib/: Cargo.toml
skill-tree-testlib/src/: assertion.rs  fixtures.rs  github.rs  lib.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/cli/: embed.rs  mod.rs  render.rs  unblocked.rs  validate.rs
src/error/: cli.rs  config.rs  github.rs  graph.rs  render.rs  see_also.rs
src/github/: issues.rs  mod.rs  projects.rs
src/graph/: mod.rs  see_also.rs  unblocked.rs  validate.rs
src/render/: body.rs  html.rs  label.rs  mod.rs  style.rs  svg.rs
src/render/assets/: fragment.html  panel.css  panel.js  standalone.html
src/render/snapshots/: skill_tree__render__tests__all_three_edge_kinds.snap  skill_tree__render__tests__clusters_with_display_labels.snap  skill_tree__render__tests__color_lookup_from_status_field.snap  skill_tree__render__tests__empty_graph.snap  (+5 more)
tests/: embed.rs  github_client.rs  issue_edges.rs  project_fetch.rs  project_items.rs  project_metadata.rs  render.rs
