[package]
name = "skill-tree"
version = "3.2.1"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2024"
description = "generate graphviz files to show roadmaps"
license = "MIT"
repository = "https://github.com/nikomatsakis/skill-tree"
homepage = "https://github.com/nikomatsakis/skill-tree"


[dependencies]


[workspace]
members = ["./", "./skill-tree-testlib"]