[package]
name = "skill-tree"
version = "3.2.1"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2024"
description = "generate graphviz files to show roadmaps"
license = "MIT"
repository = "https://github.com/nikomatsakis/skill-tree"
homepage = "https://github.com/nikomatsakis/skill-tree"


[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10.1"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["macros", "rt", "time"] }
toml = "1.1.2"


[workspace]
members = ["./", "./skill-tree-testlib"]

[dev-dependencies]
indoc = "2.0.7"
insta = "1.47.2"
skill-tree-testlib = { path = "./skill-tree-testlib" }
tempfile = "3.27.0"
tokio = { version = "1.52.2", features = ["macros", "rt"] }
